AI-JADEDEVS4/src/objects/References_Delivered__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Email_Completed__c</fullName>
        <label>Call/Email Completed ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References Delivered</relationshipLabel>
        <relationshipName>References_Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Fulfilled__c</fullName>
        <label>Date Fulfilled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>References Delivered</relationshipLabel>
        <relationshipName>References_Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reference Delivered</label>
    <nameField>
        <label>Reference Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References Delivered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>